[package]
name = "tamawiki"
version = "0.1.0"
authors = ["Caolan McMahon <caolan.mcmahon@gmail.com>"]

[dependencies]
# currently depends on https://github.com/seanmonstar/warp/pull/15, which is only in master
warp = { git = "https://github.com/seanmonstar/warp" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
futures = "0.1"
http = "0.1"
tera = "0.11"
lazy_static = "1.1"

[dev-dependencies]
proptest = "0.8"
